SET(OWN_LIB_NAME sysmon)

INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}
)

SET(${OWN_LIB_NAME}_HDRS
    sysmonitor.h
    sysmonitorwin.h
    sysmon.h
    query.h
    perfhelper.h

)

SET(${OWN_LIB_NAME}_TXX
)


SET(${OWN_LIB_NAME}_SRCS
  sysmonitor.cpp
  sysmonitorwin.cpp
  sysmon.cpp
  perfhelper.cpp


)
QT4_WRAP_CPP(${OWN_LIB_NAME}_HDRS_MOC ${${OWN_LIB_NAME}_HDRS})



# Convince MSVC that txx files are also C++ files!
IF(MSVC)
SET_SOURCE_FILES_PROPERTIES(
  ${${OWN_LIB_NAME}_TXX}
  PROPERTIES
  LANGUAGE "CXX"
  HEADER_FILE_ONLY FALSE
  COMPILE_FLAGS ""
)
ENDIF(MSVC)



ADD_LIBRARY(
${OWN_LIB_NAME} STATIC
${${OWN_LIB_NAME}_SRCS}
${${OWN_LIB_NAME}_TXX}
${${OWN_LIB_NAME}_HDRS}
${${OWN_LIB_NAME}_HDRS_MOC}
${${OWN_LIB_NAME}_MOC}
)

SET_TARGET_PROPERTIES(${OWN_LIB_NAME} PROPERTIES LINKER_LANGUAGE CXX)


SET(${OWN_LIB_NAME}_LINK_LIBRARIES
RTSSSharedData
SORRYRTCoreTOE
SORRYRTCore
RTSSTasks
RTSS
)

TARGET_LINK_LIBRARIES(${OWN_LIB_NAME} ${${OWN_LIB_NAME}_LINK_LIBRARIES})
SET_TARGET_PROPERTIES(${OWN_LIB_NAME} PROPERTIES COMPILE_FLAGS "-DSORRYCLS_STATIC_DEFINE")

#UNIT TEST
#IF (RTSS_BUILD_TESTING)
#  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/testing)
#ENDIF (RTSS_BUILD_TESTING)

